# fastapi-react-bolierplate

./: .commitlintrc.yaml  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  manage.sh
.github/workflows/: check.yaml  push.yaml  scheduled-merge.yaml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/locales/: messages.pot
backend/locales/en/LC_MESSAGES/: messages.po
backend/locales/ja/LC_MESSAGES/: messages.po
backend/migrations/: env.py  script.py.mako
backend/src/one_public_api/: main.py
backend/src/one_public_api/common/: constants.py  init_data.py  query_param.py  tools.py
backend/src/one_public_api/common/utility/: files.py  search.py  string.py
backend/src/one_public_api/core/: __init__.py  exceptions.py  extensions.py  i18n.py  log.py  settings.py
backend/src/one_public_api/crud/: data_reader.py  data_updater.py
backend/src/one_public_api/locales/: messages.pot
backend/src/one_public_api/locales/en/LC_MESSAGES/: messages.mo  messages.po
backend/src/one_public_api/locales/ja/LC_MESSAGES/: messages.mo  messages.po
backend/src/one_public_api/locales/zh/LC_MESSAGES/: messages.mo  messages.po
backend/src/one_public_api/models/: __init__.py
backend/src/one_public_api/models/links/: __init__.py  user_configuration_link.py
backend/src/one_public_api/models/mixins/: __init__.py  id_mixin.py  maintenance_mixin.py  password_mixin.py  timestamp_mixin.py
backend/src/one_public_api/models/system/: action_model.py  configuration_model.py  feature_model.py  organization_model.py  permission_model.py  role_model.py  token_model.py  user_model.py
backend/src/one_public_api/routers/: authenticate_router.py  base_route.py  configuration_router.py  feature_router.py  user_router.py
backend/src/one_public_api/schemas/: authenticate_schema.py  base_schema.py  configuration_schema.py  feature_schema.py  organization_schema.py  permission_schema.py  response_schema.py  user_schema.py
backend/src/one_public_api/services/: authenticate_service.py  base_service.py  configuration_service.py  feture_service.py  user_service.py
frontend/: .gitignore  .prettierignore  .prettierrc.yaml  README.md  components.json  eslint.config.mjs  eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.build.json  vite.config.ts
frontend-old/: .prettierrc.yaml  README.md
frontend-old/app/: root.tsx  (+2 more)
scripts/: functions.sh
(+183 files in other folders)
